--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
         <h1>
           HIDDEN TIMBER FARM
         </h1>
-        <h2>PLEASE FILL IN YOUR NAME</h2>
+        <h2>Please fill in your name</h2>
       </div>
 
       {{!-- <h1 id="h1">Hidden Timber Farm</h1>
@@ -20,7 +20,7 @@
       </div>
       <h1 id="h1">please fill in your name</h1> --}}
       <input id="input"></input>
-      <button class="button large" id="nameButton">Button</button>
+      <button class="button large" id="nameButton">ENTER</button>
     </div>
 
     <div class="bottom-content-section" id="scrollButton" data-magellan data-threshold="0">
@@ -53,7 +53,7 @@
             <div class="content__right">
               <div class="content__main">
                 <p>
-                  We here at Hidden Timber Farm work hard to provide a premier boarding experiencefor our clients and
+                  We here at Hidden Timber Farm work hard to provide a premier boarding experience for our clients and
                   their beloved equine companions. Read on to learn about our horse boarding options and some of
                   amenities we offer. Then give us a call at 913-123-4567. We look forward to speaking with you ______.
                 </p>
@@ -72,7 +72,7 @@
 
 
                 <div>
-                  <img class="spinner-thumbnail" src="" />
+                  <img class="spinner-thumbnail" src="/images/boarding-options.jpg" />
                   <h4>STALL WITH RUN-OUT</h4>
                   All our stalls are 12 x 14-feet to accommodate larger horses. Each has a run-out that allows you horse
                   outdoor stimulation and healthy movement. Each stall has an automatic waterer, hay feeder, half grille
@@ -82,7 +82,7 @@
 
 
                 <div>
-                  <img class="spinner-thumbnail" src="" />
+                  <img class="spinner-thumbnail" src="/images/paolo-chiabrando-lW9gxX6rrvE-unsplash.jpg" />
                   <h4>PASTURE ONLY</h4>
                   We offer several mare and gelding pastures to suit horses of all temperaments. Each pasture has
                   waterers and an appropriate number of run-in sheds and multiple hay rings during winter months. The
@@ -141,29 +141,29 @@
             </div>
             <div class="content__right">
               <div class="content__main">
-                
+
                 <div>
                   <img class="spinner-thumbnail square" src="/images/sq-rodney.jpg">
                   <h4>RODNEY</h4>
                   Once a trusty bomb-proof lesson horse, 25-year-old Rodney has retired to a life of leisure. He lives
                   in the north pasture with our older geldings. He has never been known to turn down a treat.
                 </div>
-                
+
                 <div>
                   <img class="spinner-thumbnail square" src="/images/sq-jack.jpg">
                   <h4>JACK</h4>
                   Border Collies are known for their intelligence, and Jack is no exception to that rule. He is a
-                  constant companion to our barn manager and knows all the horses, and theyhim. He knows tons of tricks
+                  constant companion to our barn manager and knows all the horses, and they him. He knows tons of tricks
                   and is always up for a game of Frisbee.
                 </div>
-                
+
                 <div>
                   <img class="spinner-thumbnail square" src="/images/sq-felix.jpg">
                   <h4>FELIX</h4>
                   Our mouse-patrolling barn cat is Felix. He’s often on the prowl and is somewhat nocturnal. But he is
                   very friendly, when you can find him.
                 </div>
-                
+
                 <div>
                   <img class="spinner-thumbnail square" src="/images/sq-tucker.jpg">
                   <h4>TUCKER</h4>
