--- a/views/horse.handlebars
+++ b/views/horse.handlebars
@@ -51,7 +51,7 @@
         {{!-- radio button yes or no --}}
 
         <label for="out">Move Out Date</label><br>
-        <input type="text" id="out"><br>
+        <input type="date" id="out"><br>
         {{!-- shouldn't be required --}}
  
         <label for="owner">Owner Id</label><br>
