--- a/views/owner.handlebars
+++ b/views/owner.handlebars
@@ -23,16 +23,17 @@
         <input type="text" id="state" name="state"><br>
 
         <label for="zip">Zip</label><br>
-        <input type="text" id="zip" name="zip"><br>
+        <input type="number" id="zip" name="zip"><br>
 
         <label for="horse">Number Horses</label><br>
-        <input type="text" id="horse" name="horse"><br>
+        <input type="number" id="horse" name="horse"><br>
 
-        <label for="tp">Trailer Parking</label><br>
-        <input type="text" id="tp" name="tp"><br>
-        {{!-- radio button yes or no --}}
-
-
+        {{!-- <label for="tp">Trailer Parking</label><br>
+        <input type="tex" name="tp" id="tp"><br> --}}
+        <p>Trailer Parking</p><br>
+        <input type="radio" name="tp" class="tp" value=true>Yes<br>
+        <input type="radio" name="tp" class="tp" value=false>No<br>
+        {{!-- radio button yes or no --}}    
         <button id="submit">Submit</button>
     </form>
     {{!-- <ul id="owners-list" class="list-group">
@@ -48,5 +49,5 @@
 
 <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.js"></script>
-{{!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> --}}
+{{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> --}}
 <script src="/js/owners.js"></script>
