--- a/public/styles/owner&horse.css
+++ b/public/styles/owner&horse.css
@@ -11,10 +11,10 @@ input {
     border: 1px solid grey;
 }
 
-input[type=radio] {
+/* input[type=radio] {
     max-width: 25px;
     width: 100%;
-}
+} */
 
 .container {
     max-width: 960px;
@@ -31,4 +31,10 @@ input[type=radio] {
     padding: 10px;
     font-size: medium;
     border: 1px solid grey;
+}
+#tp {
+   font-size: medium; 
+   max-width: 375px;
+   width: 100%;
+   height: 30px;
 }
