--- a/views/horse.handlebars
+++ b/views/horse.handlebars
@@ -8,8 +8,14 @@
         <input type="text" id="barn" name="barn"><br>
 
         <label for="sex">Sex</label><br>
-        <input type="text" id="sex" name="sex"><br>
-        {{!-- radio button 3 options --}}
+        {{!-- <input type="text" id="sex" name="sex"><br> --}}
+        {{!-- radio button --}} 
+        <select name="sex" id="sex">
+            <option value=""> Select Option</option>
+            <option value="Gelding">Gelding</option>
+            <option value="Mare">Mare</option>
+            <option value="Stallion">Stallion</option>
+        </select><br>
 
         <label for="breed">Breed</label><br>
         <input type="text" id="breed" name="breed"><br>
@@ -21,12 +27,22 @@
         <input type="text" id="description" name="description"><br>
 
         <label for="chipped">Chipped</label><br>
-        <input type="text" id="chipped" name="chipped"><br>
+        {{!-- <input type="text" id="chipped" name="chipped"><br> --}}
         {{!-- radio button yes or no --}} 
+        <select name="chipped" id="chipped">
+            <option value=""> Select Option</option>
+            <option value="true">Yes</option>
+            <option value="false">No</option>
+        </select> <br>
 
         <label for="tattooed">Tattooed</label><br>
-        <input type="text" id="tattooed" name="tattooed"><br>
+        {{!-- <input type="text" id="tattooed" name="tattooed"><br> --}}
         {{!-- radio button yes or no --}}
+        <select name="tattooed" id="tattooed">
+            <option value=""> Select Option</option>
+            <option value="true">Yes</option>
+            <option value="false">No</option>
+        </select> <br>
 
         <label for="vet">Preferred Veterinarian</label><br>
         <input type="text" id="vet" name="vet"><br>
@@ -47,11 +63,16 @@
         <input type="text" id="stall" name="stall"><br>
 
         <label for="quarantine">Quarantine</label><br>
-        <input type="text" id="quarantine" name="quarantine"><br>
+        {{!-- <input type="text" id="quarantine" name="quarantine"><br> --}}
         {{!-- radio button yes or no --}}
+        <select name="quarantine" id="quarantine">
+            <option value=""> Select Option</option>
+            <option value="true">Yes</option>
+            <option value="false">No</option>
+        </select> <br>
 
         <label for="out">Move Out Date</label><br>
-        <input type="date" id="out"><br>
+        <input type="date" id="out" name="out"><br>
         {{!-- shouldn't be required --}}
  
         <label for="owner">Owner Id</label><br>
