change background color to white so that we can see the form

--- a/views/owner.handlebars
+++ b/views/owner.handlebars
@@ -1,44 +1,44 @@
 <div class="container">
-    <h1>{{msg}} Please enter your information.</h1>
+    <h3>Please enter Owner's information.</h3>
     <form class="validateForm">
-        <label for="first"> First Name</label><br>
-        <input type="text" id="first" name="first"><br>
+        <label for="first"> First Name</label>
+        <input type="text" id="first" name="first">
 
-        <label for="last"> Last Name</label><br>
-        <input type="text" id="last" name="last"><br>
+        <label for="last"> Last Name</label>
+        <input type="text" id="last" name="last">
 
-        <label for="phone"> Phone Number</label><br>
-        <input type="number" id="phone" name="phone"><br>
+        <label for="phone"> Phone Number</label>
+        <input type="number" id="phone" name="phone">
 
-        <label for="email"> Email</label><br>
-        <input type="email" id="email" name="email"><br>
+        <label for="email"> Email</label>
+        <input type="email" id="email" name="email">
 
-        <label for="street">Street</label><br>
-        <input type="text" id="street" name="street"><br>
+        <label for="street">Street</label>
+        <input type="text" id="street" name="street">
 
-        <label for="city">City</label><br>
-        <input type="text" id="city" name="city"><br>
+        <label for="city">City</label>
+        <input type="text" id="city" name="city">
 
-        <label for="state">State</label><br>
-        <input type="text" id="state" name="state"><br>
+        <label for="state">State</label>
+        <input type="text" id="state" name="state">
 
-        <label for="zip">Zip</label><br>
-        <input type="number" id="zip" name="zip"><br>
+        <label for="zip">Zip</label>
+        <input type="number" id="zip" name="zip">
 
-        <label for="horse">Number Horses</label><br>
-        <input type="number" id="horse" name="horse"><br>
+        <label for="horse">Number Horses</label>
+        <input type="number" id="horse" name="horse">
 
         {{!-- radio button yes or no --}}    
-        {{!-- <label>Trailer Parking</label><br>
+        {{!-- <label>Trailer Parking</label>
         <input type="radio" name="radio" value=true>Yes
-        <input type="radio" name="radio" value=false>No<br> --}}
+        <input type="radio" name="radio" value=false>No --}}
 
-        <label for="tp">Trailer Parking</label><br>
+        <label for="tp">Trailer Parking</label>
         <select name="tp" id="tp">
             <option value=""> Select Option</option>
             <option value="true">Yes</option>
             <option value="false">No</option>
-        </select> <br>
+        </select> 
         <button id="submit">Submit</button>
     </form>
     
