--- a/views/owner.handlebars
+++ b/views/owner.handlebars
@@ -1,44 +1,54 @@
 <div class="container">
-    <h3>Please enter Owner's information.</h3>
+    <h3>Stable Manager Input Owner's Data</h3>
     <form class="validateForm">
-        <label for="first"> First Name</label>
-        <input type="text" id="first" name="first">
-
-        <label for="last"> Last Name</label>
-        <input type="text" id="last" name="last">
-
-        <label for="phone"> Phone Number</label>
-        <input type="number" id="phone" name="phone">
-
-        <label for="email"> Email</label>
-        <input type="email" id="email" name="email">
-
-        <label for="street">Street</label>
-        <input type="text" id="street" name="street">
-
-        <label for="city">City</label>
-        <input type="text" id="city" name="city">
-
-        <label for="state">State</label>
-        <input type="text" id="state" name="state">
-
-        <label for="zip">Zip</label>
-        <input type="number" id="zip" name="zip">
-
-        <label for="horse">Number Horses</label>
-        <input type="number" id="horse" name="horse">
-
+        <div class="style">
+            <label for="first"> First Name</label>
+            <input type="text" id="first" name="first">
+        </div>
+        <div class="style">
+            <label for="last"> Last Name</label>
+            <input type="text" id="last" name="last">
+        </div>
+        <div class="style">
+            <label for="phone"> Phone Number</label>
+            <input type="number" id="phone" name="phone">
+        </div>
+        <div class="style">
+            <label for="email"> Email</label>
+            <input type="email" id="email" name="email">
+        </div>
+        <div class="style">
+            <label for="street">Street</label>
+            <input type="text" id="street" name="street">
+        </div>
+        <div class="style">
+            <label for="city">City</label>
+            <input type="text" id="city" name="city">
+        </div>
+        <div class="style">
+            <label for="state">State</label>
+            <input type="text" id="state" name="state">
+        </div>
+        <div class="style">
+            <label for="zip">Zip</label>
+            <input type="number" id="zip" name="zip">
+        </div>
+        <div class="style">
+            <label for="horse">Number Horses</label>
+            <input type="number" id="horse" name="horse">
+        </div>
+        <div class="style">
+            <label for="tp">Trailer Parking</label>
+            <select name="tp" id="tp">
+                <option value=""> Select Option</option>
+                <option value="true">Yes</option>
+                <option value="false">No</option>
+            </select>
+        </div>
         {{!-- radio button yes or no --}}    
         {{!-- <label>Trailer Parking</label>
         <input type="radio" name="radio" value=true>Yes
         <input type="radio" name="radio" value=false>No --}}
-
-        <label for="tp">Trailer Parking</label>
-        <select name="tp" id="tp">
-            <option value=""> Select Option</option>
-            <option value="true">Yes</option>
-            <option value="false">No</option>
-        </select> 
         <button id="submit">Submit</button>
     </form>
     
