--- a/views/horse.handlebars
+++ b/views/horse.handlebars
@@ -1,83 +1,100 @@
 <div class="container">
-    <h1>Stable Manager Input Horse's Data</h1>
+    <h3>Stable Manager Input Horse's Data</h3>
     <form class="validateForm">
-        <label for="name">Name</label><br>
-        <input type="text" id="name" name="name"><br>
-
-        <label for="barn">Barn Name</label><br>
-        <input type="text" id="barn" name="barn"><br>
-
-        <label for="sex">Sex</label><br>
-        {{!-- <input type="text" id="sex" name="sex"><br> --}}
-        {{!-- radio button --}} 
-        <select name="sex" id="sex">
-            <option value=""> Select Option</option>
-            <option value="Gelding">Gelding</option>
-            <option value="Mare">Mare</option>
-            <option value="Stallion">Stallion</option>
-        </select><br>
-
-        <label for="breed">Breed</label><br>
-        <input type="text" id="breed" name="breed"><br>
-
-        <label for="color">Color</label><br>
-        <input type="text" id="color" name="color"><br>
-
-        <label for="description">Description</label><br>
-        <input type="text" id="description" name="description"><br>
-
-        <label for="chipped">Chipped</label><br>
-        {{!-- <input type="text" id="chipped" name="chipped"><br> --}}
-        {{!-- radio button yes or no --}} 
-        <select name="chipped" id="chipped">
-            <option value=""> Select Option</option>
-            <option value="true">Yes</option>
-            <option value="false">No</option>
-        </select> <br>
-
-        <label for="tattooed">Tattooed</label><br>
-        {{!-- <input type="text" id="tattooed" name="tattooed"><br> --}}
-        {{!-- radio button yes or no --}}
-        <select name="tattooed" id="tattooed">
-            <option value=""> Select Option</option>
-            <option value="true">Yes</option>
-            <option value="false">No</option>
-        </select> <br>
-
-        <label for="vet">Preferred Veterinarian</label><br>
-        <input type="text" id="vet" name="vet"><br>
-
-        <label for="farrier">Preferred Farrier</label><br>
-        <input type="text" id="farrier" name="farrier"><br>
-
-        <label for="date">Vaccination Date</label><br>
-        <input type="date" id="date" name="date"><br>
-
-        <label for="type">Vaccination Type</label><br>
-        <input type="text" id="type" name="type"><br>
-
-        <label for="in">Move In Date</label><br>
-        <input type="date" id="in" name="in"><br>
-        
-        <label for="stall">Stall Assignment</label><br>
-        <input type="text" id="stall" name="stall"><br>
-
-        <label for="quarantine">Quarantine</label><br>
-        {{!-- <input type="text" id="quarantine" name="quarantine"><br> --}}
-        {{!-- radio button yes or no --}}
-        <select name="quarantine" id="quarantine">
-            <option value=""> Select Option</option>
-            <option value="true">Yes</option>
-            <option value="false">No</option>
-        </select> <br>
-
-        <label for="out">Move Out Date</label><br>
-        <input type="date" id="out" name="out"><br>
-        {{!-- shouldn't be required --}}
- 
-        <label for="owner">Owner Id</label><br>
-        <input type="text" id="owner" name="owner"><br>
-
+        <div class="style">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name">     
+        </div>
+        <div class="style">
+            <label for="barn">Barn Name</label>
+            <input type="text" id="barn" name="barn">
+        </div>
+        <div class="style">
+            <label for="sex">Sex</label>
+            {{!-- <input type="text" id="sex" name="sex"> --}}
+            {{!-- radio button --}} 
+            <select name="sex" id="sex">
+                <option value=""> Select Option</option>
+                <option value="Gelding">Gelding</option>
+                <option value="Mare">Mare</option>
+                <option value="Stallion">Stallion</option>
+            </select>
+        </div>
+        <div class="style">
+            <label for="breed">Breed</label>
+            <input type="text" id="breed" name="breed">
+        </div>
+        <div class="style">
+            <label for="color">Color</label>
+            <input type="text" id="color" name="color">
+        </div>
+        <div class="style">
+            <label for="description">Description</label>
+            <input type="text" id="description" name="description">
+        </div>
+        <div class="style">
+            <label for="chipped">Chipped</label>
+            {{!-- <input type="text" id="chipped" name="chipped"> --}}
+            {{!-- radio button yes or no --}} 
+            <select name="chipped" id="chipped">
+                <option value=""> Select Option</option>
+                <option value="true">Yes</option>
+                <option value="false">No</option>
+            </select> 
+        </div>
+        <div class="style">
+            <label for="tattooed">Tattooed</label>
+            {{!-- <input type="text" id="tattooed" name="tattooed"> --}}
+            {{!-- radio button yes or no --}}
+            <select name="tattooed" id="tattooed" class="style">
+                <option value=""> Select Option</option>
+                <option value="true">Yes</option>
+                <option value="false">No</option>
+            </select> 
+        </div>
+        <div class="style">
+            <label for="vet">Preferred Veterinarian</label>
+            <input type="text" id="vet" name="vet">
+        </div>
+        <div class="style">
+            <label for="farrier">Preferred Farrier</label>
+            <input type="text" id="farrier" name="farrier">
+        </div>
+        <div class="style">
+            <label for="date">Vaccination Date</label>
+            <input type="date" id="date" name="date">
+        </div>
+        <div class="style">
+            <label for="type">Vaccination Type</label>
+            <input type="text" id="type" name="type">
+        </div>
+        <div class="style">
+            <label for="in">Move In Date</label>
+            <input type="date" id="in" name="in">
+        </div>
+        <div class="style">
+            <label for="stall">Stall Assignment</label>
+            <input type="text" id="stall" name="stall">
+        </div>
+        <div class="style">
+            <label for="quarantine">Quarantine</label>
+            {{!-- <input type="text" id="quarantine" name="quarantine"> --}}
+            {{!-- radio button yes or no --}}
+            <select name="quarantine" id="quarantine">
+                <option value=""> Select Option</option>
+                <option value="true">Yes</option>
+                <option value="false">No</option>
+            </select> 
+        </div>
+        <div class="style">
+            <label for="out">Move Out Date</label>
+            <input type="date" id="out" name="out">
+            {{!-- shouldn't be required --}}
+        </div>
+        <div class="style">
+            <label for="owner">Owner Id</label>
+            <input type="text" id="owner" name="owner">
+        </div>
         <button id="submit">Submit</button>
     </form>
 
