--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="/styles/foundation.css">
   <link rel="stylesheet" href="/styles/animate.css">
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="/styles/owner&horse.css">
   <title>Hidden Timber Farm</title>
 
 <!-- Favicon -->
