fixed some typos and fixed owner landing page

--- a/views/horseOwnerLoginLanding.handlebars
+++ b/views/horseOwnerLoginLanding.handlebars
@@ -10,9 +10,9 @@
                     <img src="/images/origami_money_horse.jpg" alt="money horse" style="width:300px;height:200px;">
                 </div>
                 <div class="flip-card-back">
-                    <h4>Board Payment Due</h4>
-                    <p>1st of every month</p>
-                    <p>Late fees begin the following day</p>
+                    <h3>Board Payment Due</h3>
+                    <h6>1st of every month</h6>
+                    <h6>Late fees begin the following day</h6>
                 </div>
             </div>
         </div>
@@ -23,10 +23,10 @@
                         style="width:300px;height:200px;">
                 </div>
                 <div class="flip-card-back">
-                    <h4>Farrier Day</h4>
-                    <p>with Jeff Miller</p>
-                    <p>Friday, January 31, 2020</br>
-                        starting at Noon</p>
+                    <h3>Farrier Day</h3>
+                    <h6>with Jeff Miller<h6>
+                    <h6>Friday, January 31, 2020</br>
+                        starting at Noon</h6>
                 </div>
             </div>
         </div>
@@ -36,10 +36,10 @@
                     <img src="/images/horse-vaccination.jpg" alt="vaccination" style="width:300px;height:200px;">
                 </div>
                 <div class="flip-card-back">
-                    <h4>Vet Day</h4>
-                    <p>Spring vaccinations with <br>Jeanie Hauser, DVM</p>
-                    <p>Friday, March 13, 2020<br>
-                        starting at Noon</p>
+                    <h3>Vet Day</h3>
+                    <h6>Spring vaccinations with <br>Jeanie Hauser, DVM</h6>
+                    <h6>Friday, March 13, 2020<br>
+                        starting at Noon</h6>
                 </div>
             </div>
         </div>
@@ -49,9 +49,9 @@
                     <img src="/images/bonfire.jpeg" alt="bonfire" style="width:300px;height:200px;">
                 </div>
                 <div class="flip-card-back">
-                    <h4>Hidden Timber Farm Bonfire</h4>
-                    <p>Join your barn friends for a bonfire.<br> Smores provided.</p>
-                    <p>Friday, February 21, 2020, 6 to 9 p.m.</p>
+                    <h3>Hidden Timber Farm Bonfire</h3>
+                    <h6>Join your barn friends for a bonfire.<br> Smores provided.</h6>
+                    <h6>Friday, February 21, 2020, 6 to 9 p.m.</h6>
                 </div>
             </div>
         </div>
