--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,7 +10,7 @@
         <h1>
           HIDDEN TIMBER FARM
         </h1>
-        <h2>Please fill in your name</h2>
+        <h2>Please fill in your name:</h2>
       </div>
 
       {{!-- <h1 id="h1">Hidden Timber Farm</h1>
@@ -50,7 +50,7 @@
                 <p>
                   We here at Hidden Timber Farm work hard to provide a premier boarding experience for our clients and
                   their beloved equine companions. Read on to learn about our horse boarding options and some of
-                  amenities we offer. Then give us a call at 913-123-4567. We look forward to speaking with you ______.
+                  amenities we offer. Then give us a call at 913-123-4567, or fill out the Contact Us form. We look forward to speaking with you, _________.
                 </p>
               </div>
               <h3 class="content__index">01</h3>
@@ -69,7 +69,7 @@
                 <div>
                   <img class="spinner-thumbnail" src="/images/boarding-options.jpg" />
                   <h4>STALL WITH RUN-OUT</h4>
-                  All our stalls are 12 x 14-feet to accommodate larger horses. Each has a run-out that allows you horse
+                  All our stalls are 12 x 14-feet to accommodate larger horses. Each has a run-out that allows your horse
                   outdoor stimulation and healthy movement. Each stall has an automatic waterer, hay feeder, half grille
                   sliding door, and high-quality, three-quarter-inch rubber floor mat. The barn aisles have rubberized
                   flooring as well. Come visit us and we’ll show you around.
@@ -114,7 +114,7 @@
                   <img class="spinner-thumbnail" src="/images/wash-room.jpg">
                   <h4>WASH ROOM</h4>
                   Our indoor wash room is well lit and features crossties, a nonslip and well-draining floor, and warm
-                  water year-round. A radiant heater on the ceiling keeps you and your horse warm.
+                  water year-round. A heater keeps you and your horse warm.
                 </div>
 
                 <div>
@@ -177,6 +177,7 @@
       <ul class="menu menu-hover-lines">
         <div class="navIn" id="navIn">
           <ul class="menu menu-hover-lines">
+            <li><a href="#"> Contact Us | </a></li>
             <li><a href="#"> Log In </a></li>
           </ul>
         </div>
@@ -184,19 +185,19 @@
         <div class="navOut" id="navOut">
           <ul class="menu menu-hover-lines">
             <div class="navHome">
-              <li class=""><a href="#">Home-</a></li>
+              <li class=""><a href="#">Home |</a></li>
 
             </div>
-            <div class="navService">
+            {{!-- <div class="navService">
               <li><a href="#">Services- </a></li>
 
-            </div>
-            <div class="navContact">
-              <li><a href="#">Contact- </a></li>
+            </div> --}}
+            {{!-- <div class="navContact">
+              <li><a href="#">Contact- </a></li> --}}
 
             </div>
             <div class="navLogOut">
-              <li><a href="#">Log Out-</a></li>
+              <li><a href="#"> Log Out</a></li>
 
             </div>
           </ul>
