added nav bar to owner landing page and swapped out Favicon image

--- a/views/horseOwnerLoginLanding.handlebars
+++ b/views/horseOwnerLoginLanding.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2 id="event-header">Upcoming Events and Appointments <br>
+    <h2 id="event-header">UPCOMING EVENTS & APPOINTMENTS<br>
     for Horse Owners</h2>
     <br>
     <br>
@@ -60,3 +60,36 @@
 
 <h2 id="event-header">Questions? <br>
     Contact the Stable Manager</h2>
+
+  <div class="nav" id="nav">
+      <ul class="menu menu-hover-lines">
+        <div class="navIn" id="navIn">
+          {{!-- <ul class="menu menu-hover-lines">
+            <li><a href="#"> Contact Us | </a></li>
+            <li><a href="#"> Log In </a></li>
+          </ul>
+        </div> --}}
+
+        <div class="navOut" id="navOut">
+          <ul class="menu menu-hover-lines">
+            <div class="navHome">
+              <li class=""><a href="#">Home | </a></li>
+
+            </div>
+            {{!-- <div class="navService">
+              <li><a href="#">Services- </a></li>
+
+            </div> --}}
+            {{!-- <div class="navContact">
+              <li><a href="#">Contact- </a></li> --}}
+
+            <div class="navLogOut">
+              <li><a href="#"> Log Out</a></li>
+
+            </div>
+          </ul>
+        </div>
+    </div>
+  </div>
+
+</div>
