show the data on the page

--- a/public/styles/owner&horse.css
+++ b/public/styles/owner&horse.css
@@ -1,6 +1,15 @@
-/* body {
-    background: white;
-} */
+* {
+    box-sizing: border-box;
+}
+body {
+    /* background: white; */
+    background: url(../images/owner&horse.jpeg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    position: static;
+}
 
 input, select {
     max-width: 500px;
@@ -9,6 +18,9 @@ input, select {
 }
 label {
     font-size: large;
+}
+table {
+    table-layout: fixed;
 }
 .container {
     padding: 2.5rem;
@@ -22,7 +34,34 @@ label {
 .style {
     margin-bottom: 15px;
 }
+#col-1 {
+    /* border: 1px solid yellow; */
+    width: 45%;
+    margin: 0;
+    float: left;
+    background: #fffffff0;
+    padding: 2.5rem;
+    margin-right: 50px;
+    margin-bottom: 25px;
+    border-radius: 5px;
+
+}
+#col-2 {
+    /* border: 1px solid green; */
+    margin: 0;
+    float: left;
+    font-size: medium;
+    max-width: 50%;
+    background: #fffffff0;
+    padding: 2.5rem;
+    border-radius: 5px;
+}
+#row {
+    /* border: 1px solid red; */
+    overflow: hidden;
+}
 #submit {
     border: 1px solid black;
-    padding: 8px;
+    padding: 5px;
+    font-size: 16px;
 }
