--- a/views/contactUs.handlebars
+++ b/views/contactUs.handlebars
@@ -4,31 +4,37 @@
 
     <form class="validateForm">
         <div class="style">
-            <label for="first"> First Name</label>
-            <input type="text" id="first" name="first">
+            <label for="name">Name*</label>
+            <input type="text" id="name" placeholder="Your first and last name here" name="name">
         </div>
         <div class="style">
-            <label for="last"> Last Name</label>
-            <input type="text" id="last" name="last">
+            <label for="email">Email*</label>
+            <input type="email" id="email" placeholder="mail@sample.com" name="email">
         </div>
         <div class="style">
-            <label for="phone"> Phone Number</label>
-            <input type="number" id="phone" name="phone">
+            <label for="phone">Phone Number*</label>
+            <input type="number" id="phone" placeholder="1234567890" name="phone">
         </div>
         <div class="style">
-            <label for="email"> Email</label>
-            <input type="email" id="email" name="email">
+            <label for="requestCall">Request Phone Call:</label>
+            <h5>Yes:<input type="checkbox" value="Yes" name="call"><br />
+                No: <input type="checkbox" value="No" name="call"><br /></h5>
         </div>
         <div class="style">
-            <label for="message"> Brief Message (100 characters)</label>
+            <label for="message"> Brief Message (100 characters)*</label>
             <maxlength="100">
-            <textarea rows="4" cols="50" maxlength="100" id="message-to-farm" name="message"></textarea>
+                <textarea name="message" rows="6" cols="25"
+                    placeholder="Type your message to Hidden Timber Farm here"></textarea><br />
+                </maxlength>
         </div>
+        <h6>*Required field</h6>
 
-         <button id="submit">SUBMIT</button>
-        </form>
-<br>
-        <h5>Please allow a few business days for us to respond. Thank you.</h5>
+        <input type="submit" id="contact-send-button" value="Send">
+        <input type="reset" id="contact-clear-button" value="Clear">
+    </form>
+    <br>
+
+    <h5>Please allow a few business days for us to respond. Thank you.</h5>
 
 </div>
 
